test/errors/error33.vult
fun foo(x:int, x:int) {
  return x;
}